End of lesson code

--- a/SpartaToDo/SpartaToDo/Views/ToDo/Index.cshtml
+++ b/SpartaToDo/SpartaToDo/Views/ToDo/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<SpartaToDo.Models.ToDo>
+﻿@model IEnumerable<SpartaToDo.Models.ViewModels.ToDoViewModel>
 
 @{
     ViewData["Title"] = "Index";
@@ -42,12 +42,38 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Date)
             </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+            <td class="btn-group-lg btn-group-vertical">
+                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-primary">Edit</a> 
+                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-info">Details</a> 
+                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Delete</a>
             </td>
         </tr>
 }
     </tbody>
 </table>
+
+<div>
+<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+<script type="text/javascript">
+  google.charts.load("current", {packages:["corechart"]});
+  google.charts.setOnLoadCallback(drawChart);
+  function drawChart() {
+    var data = google.visualization.arrayToDataTable([
+      ['Status', 'Number'],
+      ['Complete',     @Model.Where(x => x.Complete).Count()],
+      ['Incomplete',   @Model.Where(x => !x.Complete).Count()]
+    ]);
+
+    var options = {
+      title: 'To Do Completion',
+      pieHole: 0.4,
+    };
+
+    var chart = new google.visualization.PieChart(document.getElementById('donutchart'));
+    chart.draw(data, options);
+  }
+</script>
+</div>
+<div>
+<div id="donutchart" style="width: 900px; height: 500px;"></div>
+</div>
