--- a/SpartaToDo/SpartaToDo/Views/ToDo/Delete.cshtml
+++ b/SpartaToDo/SpartaToDo/Views/ToDo/Delete.cshtml
@@ -30,10 +30,10 @@
             @Html.DisplayFor(model => model.Complete)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Date)
+            @Html.DisplayNameFor(model => model.DateCreated)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Date)
+            @Html.DisplayFor(model => model.DateCreated)
         </dd>
     </dl>
     
