--- a/SpartaToDo/SpartaToDo/Views/ToDo/Details.cshtml
+++ b/SpartaToDo/SpartaToDo/Views/ToDo/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model SpartaToDo.Models.ToDo
+﻿@model SpartaToDo.Models.ViewModels.ToDoViewModel
 
 @{
     ViewData["Title"] = "Details";
@@ -29,10 +29,10 @@
             @Html.DisplayFor(model => model.Complete)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Date)
+            @Html.DisplayNameFor(model => model.DateCreated)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Date)
+            @Html.DisplayFor(model => model.DateCreated)
         </dd>
     </dl>
 </div>
