--- a/SpartaToDo/SpartaToDo/Views/ToDo/Edit.cshtml
+++ b/SpartaToDo/SpartaToDo/Views/ToDo/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model SpartaToDo.Models.ToDo
+﻿@model SpartaToDo.Models.ViewModels.ToDoViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -20,18 +20,13 @@
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
+                <textarea asp-for="Description" class="form-control rounded-0" rows = "10"></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="Complete" /> @Html.DisplayNameFor(model => model.Complete)
                 </label>
-            </div>
-            <div class="form-group">
-                <label asp-for="Date" class="control-label"></label>
-                <input asp-for="Date" class="form-control" />
-                <span asp-validation-for="Date" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
